# quantum-animal-shogi

./: .gitignore  TODO.md  _t  _t.ps1  _t.py  quantum_animal_shogi-0.1.0-cp313-cp313-win_amd64.whl
quantum-animal-shogi/: Cargo.toml  _b  _b.ps1  _t  _t.ps1  quantum_animal_shogi-0.1.0-cp313-cp313-win_amd64.whl
quantum-animal-shogi/crates/core/: Cargo.toml
quantum-animal-shogi/crates/core/src/: lib.rs
quantum-animal-shogi/crates/python/: Cargo.toml  pyproject.toml
quantum-animal-shogi/crates/python/python/quantum_animal_shogi/: __init__.py  adapter.py  game.py  game_with.py
quantum-animal-shogi/crates/python/src/: lib.rs
quantum-animal-shogi/crates/solver/: Cargo.toml
quantum-animal-shogi/crates/solver/src/: main.rs
quantum-animal-shogi/crates/wasm/: Cargo.toml
quantum-animal-shogi/crates/wasm/src/: lib.rs
quantum-animal-shogi/python/quantum_animal_shogi/: __init__.py
quantum-animal-shogi/src/: lib.rs  python.rs
reinforcement-learning/: main.py  reinforcement_learning.py  requirements.txt  run.bat  train.py
reinforcement-learning/alpha_zero_general/: Arena.py  Coach.py  MCTS.py  __init__.py
reinforcement-learning/alpha_zero_general/quantum_animal_shogi/: QuantumAnimalShogiGame.py  QuantumAnimalShogiNeuralNet.py  __init__.py
sample-player/: adapter.py  alpha_beta.py  play.py  run.bat  uniform_random.py
sample_player/: alpha_beta.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue
web/src/components/: GameBoard.vue  PieceCell.vue
web/src/stores/: QuantumAnimalShogiStore.ts
