[package]
name = "quantum-animal-shogi-python"
version = "0.1.0"
edition = "2024"

[lib]
name = "quantum_animal_shogi"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.14.0"
nalgebra = "0.34.1"
ndarray = "0.17.1"
numpy = "0.27.1"
pyo3 = "0.27.0"
quantum-animal-shogi-core = { path = "../core" }
